removed broken explicit references to directory at jgys.land

--- a/margin_map.html
+++ b/margin_map.html
@@ -27,4 +27,4 @@
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://d3js.org/topojson.v1.min.js"></script>
 <script src="http://d3js.org/queue.v1.min.js"></script>
-<script src="http://jgys.land/data_viz/margin_map/mn_tot.js"></script>
+<script src="/mn_tot.js"></script>
