updated instructions, added screenshot, moved margin_map.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
+<html>
+<head>
+<title>2014 DFL Statewide vs. State House Precinct-level Margins</title>
 <style>
+body {
+  font-family: helvetica, arial, sans-serif;
+}
 .mesh {
   fill: none;
   stroke: white;
@@ -19,6 +25,8 @@
   text-align: center;
 }
 </style>
+</head>
+<body>
 <p class="subheader">
 <h3>Difference in Vote Share Between DFL Candidates for Statewide Offices and DFL Candidates for State House of Representatives</h3>
 <h6>Zoom for detail. Precinct opacity is a function of vote share.</h6>
@@ -28,3 +36,5 @@
 <script src="http://d3js.org/topojson.v1.min.js"></script>
 <script src="http://d3js.org/queue.v1.min.js"></script>
 <script src="/mn_tot.js"></script>
+</body>
+</html>
